...
        onPress={() => navigation.goBack()}>
        <Icon name="keyboard-backspace" size={60} color={colors.secondary} />
      </TouchableOpacity>
      <Auth width={width / 1.25} height={width / 1.3} />
      <Title
        style={[styles.title, { color: colors.secondary }]}
        testID="forgotTitle">
        Forgot your password?
      </Title>
      <Paragraph style={[styles.text, { color: colors.text }]}>
        We just need your registered e-mail to send you password reset
        instructions
      </Paragraph>
...
        <TouchableOpacity onPress={handleNavigation}>
          <Text style={[{ color: colors.secondary }, styles.register]}>
            Register
          </Text>
        </TouchableOpacity>
      </View>
      <Snackbar testID="snackbar" visible={visible} onDismiss={toggleSnackBar}>
        Go check your e-mail!
      </Snackbar>
    </Container>
  )
}

...
