...
            style={styles.avatar}
          />
        ) : (
          <Avatar.Icon icon="account" size={80} style={styles.avatar} />
        )}

        <Text style={[styles.text, { color: colors.text }]} testID="hello">
          Hello,{' '}
          <Text style={[styles.text, { color: colors.secondary }]}>
            {user?.displayName}
          </Text>
        </Text>
      </View>
...
